--- a/404.html
+++ b/404.html
@@ -117,7 +117,7 @@
         <div class="toggle-search"><i class="fa fa-search"></i></div>
         <div class="search-expand">
           <div class="search-expand-inner">
-            <form method="get" class="searchform themeform" action="https://www.google.com/search">
+            <form method="get" class="searchform themeform" action="https://www.baidu.com/s">
               <div>
                 <input type="text" class="search" name="q" placeholder="Press enter to start searching">
               </div>
@@ -182,7 +182,9 @@
 </ul>
 
     </div>
-    
+    <div class="widget qrcode">
+	
+</div>
 
     <div id="search-2" class="widget widget_search"><h3>Search</h3>
       <form method="get" class="searchform themeform" action="https://www.google.com/search">
@@ -235,7 +237,7 @@
       <div class="pad group">
         <div class="grid one-half">
           <div id="copyright">
-              <p><br>Powered by
+              <p>Copyright (c) 2015. All rights reserved.<br>Powered by
               <a rel="nofollow" href="http://gohugo.io/" target="_blank">Hugo - the static site generator</a>.
               <a rel="nofollow" href="http://golang.org" target="_blank">#golang</a>.
             </p>
